# Ultimate-CommonUI-Menu-System

./: .gitignore  All Console Commands.html  LICENSE  Option_Menu_Test.uproject  README.md  UCFGMS.uproject  UCMS.uproject
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini  UserEngine.ini
Config/Localization/: Game_Compile.ini  Game_Export.ini  Game_ExportDialogueScript.ini  Game_Gather.ini  Game_GenerateReports.ini  Game_Import.ini  Game_ImportDialogue.ini  Game_ImportDialogueScript.ini
Content/: ConsoleVariableCollection.uasset
Content/Blueprints/UI/: BPWC_AnimRot.uasset  BPWC_Bool.uasset  BPWC_List.uasset  BPWC_Slider.uasset  BPWC_Title.uasset  BPWC_ValueReadOnly.uasset  BPW_NGX.uasset  BPW_ShaderWidget.uasset  BPW_TextInfo.uasset  E_AntiAliasingMode.uasset  E_BuiltInAAModes.uasset  E_UpscaleMode.uasset  M_AlphaStripTest.uasset  M_UMG-Additive.uasset  M_UMG-AlphaComposite.uasset  M_UMG-Masked.uasset  M_UMG-Translucent.uasset
Content/CommonUI/: BPFL_UI.uasset  UI_TEst.uasset
Content/CommonUI/Audio/: Sound_ButtonClick.uasset  Sound_ButtonHover.uasset  Starter_Background_Cue.uasset
Content/CommonUI/CharacterSelection/: Sequ_CharacterSelection.uasset
Content/CommonUI/CharacterSelection/Blueprints/: BP_CharacterSelectionController.uasset  BP_PlayerSelectionGameMode.uasset
Content/CommonUI/CharacterSelection/Level/: LVL_CharacterSelection.umap
Content/CommonUI/CharacterSelection/Materials/: M_CharacterSelectionMap.uasset
Content/CommonUI/CharacterSelectionV2/: BP_PlayerSelectionGameMode.uasset  LVL_CharacterSelection.umap  Sequ_CharacterSelection.uasset
Content/CommonUI/Env/: Blueprint_Effect_Fire.uasset
Content/CommonUI/Images/: T_GithubLogo.uasset  T_YoutubeLogo.uasset  UE_Logo_icon-only_white.uasset  UE_Logo_stacked_unreal-engine_white.uasset  hide.uasset  logo-placeholder.uasset  view.uasset
Content/CommonUI/MainWidgets/: UI_MainMenu.uasset  UI_Options.uasset  UI_Pause.uasset
Content/CommonUI/Maps/: BP_FrontEndMenuCamera.uasset  LVL_Frontend.umap  Minimal_Default.umap
Content/CommonUI/Save/: BP_OptionsSaveGame.uasset
Content/CommonUI/Settings/: BPFL_UI-Functions.uasset  BPFL_UI.uasset  Struct_GraphicsSettings.uasset  Struct_Settings.uasset  Struct_VideoSettings.uasset
Content/CommonUI/Text/: String_Table-UI.uasset
Content/CommonUI/Widgets/: BPW_Container.uasset  PBW_MainMenu.uasset  UI_MainMenu.uasset  UI_Options.uasset  UI_Pause.uasset
Content/Localization/Game/: Game.csv  Game.locmeta  Game.manifest
Content/My_UI/: 1MenuInputCopytoBP_Level_or_BP_Character.uasset  BPW_Ulitmate_GraphicsSettings.uasset  BPW_Ulitmate_GraphicsSettings_C.uasset  BPW_Ultimate_GraphicsSettings.uasset  Default__BPW_Ulitmate_GraphicsSettings_C.uasset  ExpertSettings.uasset  FSR3_vs_DLSS3.uasset  PauseMenu.uasset  x_MasterVol.uasset
Content/My_UI/SaveSettings/: BP-FL_SaveSettingsFunction.uasset  BP_SaveSettings.uasset  Str_SaveSettings.uasset
Content/Old_UI/: 1MenuInputCopytoBP_Level_or_BP_Character.uasset  BPW_Ulitmate_GraphicsSettings.uasset  BPW_Ulitmate_GraphicsSettings_C.uasset  BPW_Ultimate_GraphicsSettings.uasset  Default__BPW_Ulitmate_GraphicsSettings_C.uasset  ExpertSettings.uasset  FSR3_vs_DLSS3.uasset  PauseMenu.uasset  x_MasterVol.uasset
Content/Old_UI/SaveSettings/: BP-FL_SaveSettingsFunction.uasset  BP_SaveSettings.uasset  Str_SaveSettings.uasset
Content/Save/: BP_GraphicsSettingsSaveGame.uasset
Content/StarterContent/Architecture/: Floor_400x400.uasset
Content/StarterContent/Blueprints/: Blueprint_CeilingLight.uasset
Content/StarterContent/Materials/: M_AssetPlatform.uasset  M_Metal_Chrome.uasset
Content/StarterContent/Particles/: P_Ambient_Dust.uasset
Content/ThirdPerson/Blueprints/: BP_ThirdPersonCharacter.uasset
Content/ThirdPerson/Input/: IMC_Default.uasset
Content/ThirdPerson/Maps/: ThirdPersonMap.umap
Content/UI/: 1MenuInputCopytoBP_Level_or_BP_Character.uasset  BPW_Ulitmate_GraphicsSettings.uasset  BPW_Ultimate_GraphicsSettings.uasset  ExpertSettings.uasset  FSR3_vs_DLSS3.uasset  MenuGamemode.uasset  PauseMenu.uasset  x_MasterVol.uasset
Content/UI/SaveSettings/: BP-FL_SaveSettingsFunction.uasset  BP_SaveSettings.uasset  Str_SaveSettings.uasset
Plugins/AsyncLoadingScreen/: AsyncLoadingScreen.uplugin
Plugins/DLSS/: DLSS.uplugin
Plugins/DLSSMoviePipelineSupport/: DLSSMoviePipelineSupport.uplugin
Plugins/FSR3/: FSR3.uplugin
Plugins/FSR3/Source/fidelityfx-sdk/sdk/src/backends/dx12/: CMakeLists.txt
Plugins/FSR3MovieRenderPipeline/: FSR3MovieRenderPipeline.uplugin
Plugins/FSR3MovieRenderPipeline/Source/: FSR3MovieRenderPipeline.Build.cs
Plugins/NIS/: NIS.uplugin
Plugins/Streamline/: Streamline.uplugin
Plugins/Streamline/Docs/: APIChangesAndImprovements.md  Debugging - JSON Configs (Plugin Configs).md  Debugging - NRD.md  Debugging - SL ImGUI (Realtime Data Inspection).md  ProgrammingGuide.md  ProgrammingGuideDLSS.md  ProgrammingGuideDLSS_G.md  ProgrammingGuideDeepDVC.md  ProgrammingGuideManualHooking.md  ProgrammingGuideNIS.md  ProgrammingGuideNRD.md  ProgrammingGuidePCL.md  ProgrammingGuideReflex.md
Plugins/StreamlineDeepDVC/: StreamlineDeepDVC.uplugin
Plugins/XeSS/: LICENSE.txt  XeSS.uplugin
Plugins/XeSS/Content/: XeSSStringTable.uasset
Saved/Autosaves/: PackageRestoreData.json
Saved/Config/: ConsoleHistory.ini
Saved/Config/WindowsEditor/: EditorPerProjectUserSettings.ini  Engine.ini  GameUserSettings.ini
Saved/Config/WorldState/: 2959576711.json
Saved/Crashes/UECC-Windows-3AE0F5D643FEC1B582503399072F29D6_0000/: CrashContext.runtime-xml  UEMinidump.dmp
Saved/Crashes/UECC-Windows-421D17E14BA9910C677F149AD52D9078_0000/: CrashContext.runtime-xml  UEMinidump.dmp
Saved/Crashes/UECC-Windows-61D3CF1C47D07C93D9463E96AB72C139_0000/: CrashContext.runtime-xml  UEMinidump.dmp
Saved/Crashes/UECC-Windows-7176E1964C8B6F6A98AA5585823A8E32_0000/: Breadcrumbs_RHIThread_0.txt  CrashContext.runtime-xml  UEMinidump.dmp
Saved/SourceControl/: UncontrolledChangelists.json
docs/: CNAME
(+3754 files in other folders)
